k8s/base/landing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  labels:
    app.kubernetes.io/name: landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: landing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: landing
    spec:
      containers:
      - name: nginx
        image: nginx:1-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "16Mi"
            cpu: "10m"
          limits:
            memory: "32Mi"
            cpu: "50m"
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: landing-html
