k8s/base/landing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing
  labels:
    app.kubernetes.io/name: landing
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app.kubernetes.io/name: landing
