k8s/base/landing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing
  labels:
    app.kubernetes.io/name: landing
spec:
  ingressClassName: nginx
  rules:
  - host: color.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing
            port:
              number: 80
